$Id$

1998.12.8
  * refined memory management
  * all variants in upper case

1998.12.7
  * after deeper thought, re-introduced the connect sub-object
  * simplified GtkObj: use simple inheritance and allow easy subtyping
  * updated olabl.diffs for bugs in class functions parsing and printing
  * add ThreadObj for concurrent object programming
  (Jacques)

1998.12.3
  * pousse.ml is now a reversi game (idea for strategy ?)
  * solved startup bug (a value checker for ocaml is now available)
  (Jacques)

1998.12.2
  * added GdkObj for high level drawing primitives (Jacques)

1998.11.30
  * removed cast checking for NULL valued widgets (ml_gtk.[ch])
  * module Arg is renamed as GtkArg because of the name corrision with
	the module Arg in the standard library
  * Makefile : native code compilation added
  (Furuse)
 
1998.11.29
  * renamed widget_ops sub-object to misc
  * various improvements of set functions
  (Jacques)

1998.11.28
  * switched to object-oriented model. GtkObj is now the standard way
    to access the library, but not all objects are ready (see README)
  * removed inheritance in gtk.ml
  (Jacques)

1998.11.24
  * added inheritance in gtk.ml

1998.11.22
  * added gtkObj.ml and examples/*_obj.ml
  * various modifications in gtk.ml
				   